fe/src/css/main.scss
@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap');
@import "primereact/resources/primereact.min.css";                  //core css
@import "primeicons/primeicons.css";

:root {
    --card: #FFFFFF;
    --background: #F0F0F0;
    --primary: #0F0E17;
    --on-primary: var(--background);
    --secondary-background: var(--primary);
    --on-secondary: var(--background);
    --accent: #F6B26B;
    --washed-accent: #F6B26B15;
    --danger: #FF5959;
    --good: #2fb33a;
    --header-family: 'Merriweather', serif;
    --normal-family: 'Roboto', sans-serif;
    --max-width: 1280px;
    --min-width: 1280px;
    --shadow: 0 0 10px rgba(0, 0, 0, 0.15);
    --comment: #909090;
    --border-radius: 5px; //10px;
    --primary-cta: #0099ff;
    --on-primary-cta: #FFFFFF;
}
.p-inputtext {
    border: solid 1px var(--primary);
    font-size: 1.25em;
    border-radius: 10px;
    padding: .2em .8em;
}

.p-datatable-row-expansion {
    background-color: var(--background);

    box-shadow:
        inset 0px 11px 8px -10px #CCC,
        inset 0px -11px 8px -10px #CCC;
    &:hover {
        background-color: var(--background);
    }
}

.p-datatable-tfoot {
    border-top: 2px solid var(--comment);
}


body {
    font-family: var(--normal-family);
    background-color: var(--background);
    margin: 0;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    padding-bottom: 4em;
}

a span {
    color: var(--primary);
}

a:link {
    text-decoration: underline;
    color: var(--primary);
}

a:visited {
    text-decoration: underline;
    color: var(--primary);
}

a:hover {
    text-decoration: underline;
}

a:active {
    text-decoration: underline;
}


table {
    table-layout: fixed; // To make the use of 100% of container
    width: 100%;
    border-collapse: collapse;

    thead th {
        background-color: var(--primary);
        color: var(--on-primary);
    }

    td,
    th {
        padding: .9em 1em;
    }

    tr {
        border-bottom: 1px solid var(--background);
    }
}

.light-table-header {
    table thead th {
        background-color: var(--card);
        color: var(--primary)
    }
}
.table-container {
    background-color: var(--card);
    overflow-y: auto;
    table thead th {
        position: sticky;
        top: 0;
    }
    border-bottom: 2px solid var(--primary);
    border-radius: var(--border-radius) var(--border-radius) 0 0 ;
    box-shadow: var(--shadow);
}

.header-background {
    background-color: var(--secondary-background);
    display: flex;
    justify-content: center;
}

.header {
    padding: 1em;
    display: flex;
    width: var(--max-width);
    justify-content: left;
    align-items: center;
    a {
        display: flex;
        &:link {
            text-decoration: none
        };
    }
    .title {
        color: var(--on-secondary);
        font-family: var(--header-family);
        font-size: 2em;
        margin-left: .7em;

        display: flex; // Flex display and align-items makes it appear in the middle vertically
        align-items: center; // Flex display and align-items makes it appear in the middle vertically
    }

    .blending-logo {
        color: var(--on-secondary);
        display: inline-block;
    }
}

.icon {
    margin: 12px;

    &:hover {
        cursor: pointer;
    }
}

.outlined {
    font-variation-settings: 'FILL' 0;
}

.filled {
    font-variation-settings: 'FILL' 1;
}


.accent {
    color: var(--accent);
}

.footer {
    background-color: var(--secondary-background);
    color: var(--on-secondary);
    text-align: center;
    position: absolute;
    bottom: 0;
    width: 100%;
    display: none;
}

.main-content-container-background {
    display: flex;
    justify-content: center;
    width: 100%;
}

.main-content-container {
    width: var(--max-width);
    margin-top: 2em;
    padding: 1em 0em;
}

.right {
    display: flex;
    justify-content: right;
}

.btn {
    background-color: var(--primary-cta);
    color: var(--on-primary-cta);
    font-weight: bold;
    padding: .8em 1.2em;
    border-radius: .5em;
    cursor: pointer;
}

.comment {
    color: var(--comment);
}
.good {
    color: var(--good);
}
.danger {
    color: var(--danger);
}
.primary {
    color: var(--primary);
}
.assay-ranges-text {
    font-size: smaller;
    text-align: center;
    span {
        padding: .5em;
    }
}

.card-container {
    display: flex;
    justify-content: left;
    gap: 2em;
}
.card {
    padding: 1em;
    background-color:var(--card);
    .card-title {
        color: var(--comment);
        display: flex;
        justify-content: center;
        font-size: 1em;
        font-weight: bold;
    }
    .card-value  {
        font-family: var(--header-family);
        font-weight: bold;
        font-size: 3em;
        display: flex;
        justify-content: center;
    }
    border-radius: var(--border-radius);
    border: none;
    box-shadow: var(--shadow);
}
.order-fulfillment-card-container {
    padding: 0em 1em 0em 1em;
    .order-fulfillment-card-title {
        // font-family: var(--header-family);
        font-weight: bold;
        font-size: 1.5em;
        display: flex;
        justify-content: left;
        color: var(--comment);
        padding: 1em;
    }
}

.section-sticky-header {
    display: sticky;
    top: 0;
    color: var(--primary);
    font-family: var(--header-family);
    font-weight: bold;
    font-size: 1.75em;
    padding: 0 0 .5em .5em;
}

.space-between {
    display: flex;
    justify-content:space-between;
}

.svg-container {
    display: inline-block;
    width: 100%;
    vertical-align: top;
    overflow: hidden;
}

.svg-content-responsive {
    display: inline-block;
    top: 0;
    left: 0;
}

.svg-primary-fill {
    fill: var(--primary);
    stroke: var(--primary);
    stroke-width: 1%;
}


.svg-comment-stroke {
    stroke: var(--comment);
}

.svg-good-stroke {
    stroke: var(--good);
}

.svg-danger-stroke {
    stroke: var(--danger);
}

.order-assay-chart-container {
    display: block
}

.assay-widget-container {
    display: flex;
    justify-content: start;
    width: 100%;
    .value-container {
        display: flex;
        min-width: 2em;
        width: 15%;
        overflow: auto;
        color: var(--primary);
        margin-right:.8em;
        align-items: center;
        justify-content: right;
    }
    .svg-container {
        width: 100%;
        display: flex;
        align-items: center;
    }
}

    table tbody tr:hover {
        background-color: var(--washed-accent);
    }
    table tbody tr.p-datatable-row-expansion {
        &:hover {
            background-color: var(--background);
        }
    }
.bold {
    font-weight: bold;
}
.clickable-row-cursor {
        table tbody tr {
            cursor: pointer;
        }
        table tbody tr.p-datatable-row-expansion {
            cursor: auto;
        }
}


.non-clickable-row-cursor {
    table tr {
        cursor:auto;
    }
    table tr:hover {
        cursor: auto;
    }
}

.row-header {
    font-weight: bold;
    color: var(--comment);
}

